<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".shoedetail.ShoeDetailFragment">

            <TextView
                android:id="@+id/text_name"
                style="@style/textLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/shoe_name"
                app:layout_constraintEnd_toStartOf="@+id/edit_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@{shoe.name}"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_name"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/text_company"
                style="@style/textLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/company"
                app:layout_constraintEnd_toStartOf="@+id/edit_company"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_name" />

            <EditText
                android:id="@+id/edit_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@{shoe.company}"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_company"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/text_size"
                style="@style/textLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/shoe_size"
                app:layout_constraintEnd_toStartOf="@+id/edit_size"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_company" />

            <EditText
                android:id="@+id/edit_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@{String.valueOf(shoe.size)}"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_size"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/text_description"
                style="@style/textLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                app:layout_constraintEnd_toStartOf="@+id/edit_description"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_size" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@{shoe.description}"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_description"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/text_image"
                style="@style/textLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/image_url"
                app:layout_constraintEnd_toStartOf="@+id/edit_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_description" />

            <EditText
                android:id="@+id/edit_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textWebEditText"
                android:minHeight="48dp"
                android:text="@{shoe.images[0]}"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_image"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button_save"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_image" />

            <Button
                android:id="@+id/button_cancel"
                style="@style/SecondaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="@+id/button_save"
                app:layout_constraintStart_toStartOf="@+id/button_save"
                app:layout_constraintTop_toBottomOf="@+id/button_save" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>